--- a/como-rezar-o-terco.html
+++ b/como-rezar-o-terco.html
@@ -124,13 +124,13 @@ footer {
   <p>Guia simples e contemplativo</p>
 
   <div class="meditation-switch">
-<button onclick="location.href='../como-rezar-o-terco.html'">      
+<button onclick="location.href='como-rezar-o-terco.html'">      
   Como rezar o Terço
     </button>
-    <button onclick="location.href='../paginaartigos.html'">
+    <button onclick="location.href='paginaartigos.html'">
       Artigos
     </button>
-    <button onclick="location.href='../index.html'">
+    <button onclick="location.href='index.html'">
       Meditações
     </button>
   </div>
