--- a/paginaartigos.html
+++ b/paginaartigos.html
@@ -122,13 +122,13 @@ body {
   <p>Meditação do Santo Rosário</p>
 
   <div class="meditation-switch">
-    <button onclick="location.href='como-rezar-o-terco.html'">
-      Como rezar o Terço
+<button onclick="location.href='como-rezar-o-terco.html'">      
+  Como rezar o Terço
     </button>
-    <button onclick="location.href='paginaartigos.html'">
+    <button onclick="location.href='/paginaartigos.html'">
       Artigos
     </button>
-    <button onclick="window.scrollTo({ top: 0, behavior: 'smooth' })">
+    <button onclick="location.href='index.html'">
       Meditações
     </button>
   </div>
