--- a/paginaartigos.html
+++ b/paginaartigos.html
@@ -162,11 +162,11 @@ body {
       </a>
 
       <!-- ARTIGO 3 -->
-      <a href="meditacoes-marianas.html" class="article-card">
-        <img src="../images/artigos/maria.jpg" alt="Maria Santíssima">
+      <a href="artigos/nossasenhorafatima.html" class="article-card">
+        <img src="images2/7.png" alt="Maria Santíssima">
         <div class="article-card-content">
-          <h2>Meditações Marianas</h2>
-          <p>Aprendendo com o silêncio e a fé da Virgem Maria.</p>
+          <h2>Aparição Nossa Senhora de Fátima</h2>
+          <p>Detalhes sobre a milagrosa aparição da Virgem Maria para os Pastorinhos em Fátima</p>
         </div>
       </a>
 
