--- a/paginaartigos.html
+++ b/paginaartigos.html
@@ -170,6 +170,15 @@ body {
         </div>
       </a>
 
+      <!-- ARTIGO 4 -->
+      <a href="artigos/milagrebuenoaires.html" class="article-card">
+        <img src="images2/12.png" alt="Maria Santíssima">
+        <div class="article-card-content">
+          <h2>Milagre Eucaristico Buenos Aires 1996</h2>
+          <p>A história do milagre Eucaristico presenciado pelo Papa Francisco quando ele ainda era o Acebispo de Buenos Aires</p>
+        </div>
+      </a>
+
     </div>
 
   </main>
