--- a/index.html
+++ b/index.html
@@ -1089,7 +1089,7 @@ socorrei principalmente as que mais precisarem da vossa misericórdia.</strong><
 <div class="slide">
   <img src="images/dolorosos/29.jpg" alt="">
   <p class="meditation">
-    Jesus é apresentado ao povo, que grita: “Crucifica-o!”.
+    Jesus segue sendo rejeitado pelo seu povo, a gritos de ofensas”.
     <br><strong>Ave Maria, cheia de graça...</strong>
   </p>
 </div>
