--- a/como-rezar-o-terco.html
+++ b/como-rezar-o-terco.html
@@ -120,8 +120,8 @@ footer {
 <body>
 
 <header>
-  <h1>Rosarium – Meditação do Santo Rosário</h1>
-  <p>Guia simples e contemplativo</p>
+  <h1>Rosarium</h1>
+  <p>Guia simples e contemplativo para aprender a rezar o terço</p>
 
   <div class="meditation-switch">
 <button onclick="location.href='como-rezar-o-terco.html'">      
@@ -146,6 +146,26 @@ com a Virgem Maria, os principais mistérios da vida de Nosso Senhor
 Jesus Cristo. Enquanto nós rezamos a Ave-Maria,
 nosso intelecto vai contemplando dos mistérios da salvação.
 </p>
+</section>
+
+<section>
+<h2>Mistérios de cada dia</h2>
+<p>
+Cada dia da semana corresponde a um conjunto de mistérios
+</p>
+Segunda e Sábado - Mistérios Gozosos
+</p>
+</p>
+Terça e Sexta - Mistérios Dolorosos
+</p>
+</p>
+Quarta e Domingo - Mistérios Gloriosos
+</p>
+</p>
+Quinta - Mistérios Luminosos
+</p>
+
+
 </section>
 
 <section>
@@ -204,7 +224,7 @@ O pão nosso de cada dia nos dai hoje. Perdoai-nos as nossas dívidas, assim com
 </div>
 
 <div class="step">
-<p><strong>4.</strong> Reze o <strong>Angelus composto por 3 ave marias</strong>,
+<p><strong>4.</strong> Reze o <strong>Angelus ou apenas as 3 ave marias</strong>,
 pedindo as virtudes da fé, esperança e caridade.</p>
 <div class="prayer">
 1. O anjo do Senhor anunciou a Maria, e Ela concebeu do Espírito Santo. Ave Maria Cheia de Graça...
