--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@ footer {
 <body>
 
 <header>
-  <h1>Rosarium – Meditação do Santo Rosário</h1>
-  <p>Meditação do Santo Rosário</p>
+  <h1>Rosarium</h1>
+  <p>O Santo Rosário com imagens para auxiliar nas meditações dos mistérios</p>
 
   <div class="meditation-switch">
 <button onclick="location.href='como-rezar-o-terco.html'">      
