--- a/paginaartigos.html
+++ b/paginaartigos.html
@@ -118,8 +118,8 @@ body {
   </style>
 <body>
 <header>
-  <h1>Rosarium – Meditação do Santo Rosário</h1>
-  <p>Meditação do Santo Rosário</p>
+  <h1>Rosarium</h1>
+  <p>Artigos para aprofundar na devoção mariana e espiritualidade católica</p>
 
   <div class="meditation-switch">
 <button onclick="location.href='como-rezar-o-terco.html'">      
