--- a/como-rezar-o-terco.html
+++ b/como-rezar-o-terco.html
@@ -43,6 +43,14 @@ nav a {
   font-size: 14px;
 }
 
+footer {
+  text-align: center;
+  padding: 30px;
+  font-size: 13px;
+  font-style: italic;
+  color: #777;
+}
+
 main {
   max-width: 760px;
   margin: auto;
@@ -288,8 +296,8 @@ R. Para que sejamos dignos das promessas de Cristo.
 </main>
 
 <footer>
-Ad Iesum per Mariam
-</footer>
+Ad maiorem Dei gloriam
+<p>Contato: gabriel12258@outlook.com<p>
 
 </body>
 </html>
