--- a/index.html
+++ b/index.html
@@ -2447,6 +2447,7 @@ R. Para que sejamos dignos das promessas de Cristo. Amem</p>
 
 <footer>
 Ad maiorem Dei gloriam
+<p>Contato: gabriel12258@outlook.com<p>
 </footer>
 
 <script>
