--- a/paginaartigos.html
+++ b/paginaartigos.html
@@ -98,6 +98,15 @@ body {
   color: #2a2a2a;
   line-height: 1.6;
 }
+
+footer {
+  text-align: center;
+  padding: 30px;
+  font-size: 13px;
+  font-style: italic;
+  color: #777;
+}
+
 .meditation-switch {
   margin-top: 20px;
   display: flex;
@@ -182,6 +191,9 @@ body {
     </div>
 
   </main>
-
+<footer>
+Ad maiorem Dei gloriam
+<p>Contato: gabriel12258@outlook.com<p>
+</footer>
 </body>
 </html>
