Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ footer {
 <body>
 
 <header>
-  <h1>Rosarium</h1>
+  <h1>Rosario Meditado</h1>
   <p>O Santo Rosário com imagens para auxiliar nas meditações dos mistérios</p>
 
   <div class="meditation-switch">
